# euler

./: .gitignore  LICENSE  euler.cabal  stack.yaml
app/: Main.hs
src/: Euler.hs  EulerUtil.hs  Primality.hs
src/Euler/: Problem001.hs  Problem002.hs  Problem003.hs  Problem004.hs  Problem005.hs  Problem006.hs  Problem007.hs  Problem008.hs  Problem009.hs  Problem010.hs  Problem011.hs  Problem012.hs  Problem013.hs  Problem014.hs  Problem015.hs  Problem016.hs  Problem017.hs  Problem018.hs  Problem019.hs  Problem020.hs  Problem021.hs  Problem022.hs  Problem023.hs  Problem024.hs  Problem025.hs  Problem026.hs  Problem027.hs  Problem028.hs  Problem029.hs  Problem030.hs  Problem031.hs  Problem032.hs  Problem033.hs  Problem034.hs  Problem035.hs  Problem036.hs  Problem037.hs  Problem038.hs  Problem039.hs  Problem040.hs  (+48 more)
tools/: split_line  split_line.c
